# Templates-for-VS-Code

./: LICENSE  README.md
basic_c_linux/: README.md  main.c
basic_c_windows/: README.md
cmake_for_c/: CMakeLists.txt  CMakePresets.json  README.md
cmake_for_c/include/: header.h
cmake_for_c/src/: main.c
